--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue": "^2.6.11",
     "vue-json-viewer": "^2.2.12",
     "vue-router": "^3.1.6",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "xss": "^1.0.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.1",
